<resources>
    <string name="app_name">Get Rexy</string>
    <string name="register">Register</string>
    <string name="Login">Login</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="phone">Phone Number</string>
    <string name="dogRace">Dog Race</string>
    <string name="location">Location</string>
    <string name="clear">Clear remarks</string>
    <string name="upload">Upload dog image</string>
    <string name="new_here">New here ?</string>
    <string name="email">Email</string>
    <string name="cancel">Cancel</string>
    <string name="welcome_to_getrexy">Welcome to GetRexy</string>
    <string name="welcomePageMainText">Tailored matches, trusted sitters, and real-time updates - all in one app. Your pup\'s happiness starts here. Book now and enjoy worry-free pet care!</string>
    <string name="user">User</string>
    <string name="order_a_trip">Order a trip</string>
    <string name="log_out">Log Out</string>
    <string name="trip_history">Trip History</string>
    <string name="getrexy_app">GetRexy APP</string>
    <string name="menu_drawer_open">Drawer Open</string>
    <string name="menu_drawer_close">Drawer Close</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="rating">Rating</string>
    <string name="number_of_trips">Number Of Trips</string>
    <string name="publish">publish</string>
    <string name="years_of_experience">Years of experience</string>
    <string name="Order_A_Trip">Ready for your pup\'s next adventure? Book a trusted dog walker with GetRexy today! Invite a trip now and give your furry friend the walk they\'ll love!</string>
    <string name="choose_a_day">Choose a day</string>
    <string name="select_day">Select Day</string>
    <string name="select_a_day">Select a day</string>
    <string name="order">Order</string>
    <string name="name2">Name:</string>
    <string name="phone_number2">Phone: </string>
    <string name="location2">Location:</string>
    <string name="rating2">Rating:</string>
    <string name="back">Back</string>
    <string name="rate_your_trips">Rate Your Trips</string>
    <string name="walker_name">Walker Name:</string>
    <string name="day_of_occurrence">Day Of Occurrence:</string>
    <string name="walker_phone">Walker Phone:</string>
    <string name="day">Day</string>
    <string name="your_future_trips">Your Future Trips</string>
    <string name="trips_of_this_week">Trips Of This Week</string>


</resources>