<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:layoutDirection="ltr"
    android:padding="16dp"
    tools:context=".RegisterActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/styleUserIcon"
        android:layout_width="155dp"
        android:layout_height="155dp"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="100dp">

        <ImageView
            android:id="@+id/userIcon"
            android:layout_width="155dp"
            android:layout_height="155dp"
            android:layout_centerHorizontal="true"
            android:scaleType="centerCrop"
            android:src="@drawable/img"
            app:shapeAppearanceOverlay="@style/circular" />
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/uploadTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/styleUserIcon"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:gravity="center_horizontal"
        android:text="@string/upload"
        android:textColor="@color/white"
        android:textSize="15sp" />


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="375dp"
        android:layout_below="@id/uploadTv"
        android:layout_marginTop="0dp">

        <LinearLayout
            android:id="@+id/lnId"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/rounded_corner"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="18dp"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/userPassword"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_corner"
                android:hint="@string/password"
                android:inputType="text"
                android:padding="18dp"
                android:textColorHint="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_corner"
                android:hint="@string/userName"
                android:inputType="text|textCapSentences"
                android:padding="18dp"
                android:textColorHint="@color/white"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_corner"
                android:hint="@string/phone"
                android:inputType="number"
                android:padding="18dp"
                android:textColorHint="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/dogRace"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_corner"
                android:hint="@string/dogRace"
                android:inputType="text"
                android:padding="18dp"
                android:textColorHint="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_corner"
                android:hint="@string/location"
                android:inputType="text"
                android:padding="18dp"
                android:textColorHint="@color/white"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scrollView"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/clearRemarks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/clear"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/registerBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/white"
            android:padding="18dp"
            android:text="@string/register"
            android:textColor="@color/blue"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="Already registered?"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/loginTextBt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="32dp"
                android:clickable="true"
                android:onClick="onClick"
                android:text="@string/Login"
                android:textColor="@color/red"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
