<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/welcomePhoto"
            android:layout_width="wrap_content"
            android:layout_height="350dp"
            android:layout_marginTop="-40dp"
            android:src="@drawable/homepagephoto" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/welcome_to_getrexy"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/welcomePageMainText"
            android:textSize="21sp"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/loginBt"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:backgroundTint="@color/white"
            android:padding="18dp"
            android:text="@string/Login"
            android:textColor="@color/blue"
            android:textSize="20sp" />

        <Button
            android:id="@+id/registerBt"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:padding="18dp"
            android:text="@string/register"
            android:textColor="@color/blue"
            android:textSize="20sp" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>