<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="15dp"
    android:background="@drawable/main_background"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    tools:context=".OrderTripActivity">

    <ImageView
        android:layout_marginTop="25dp"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:src="@mipmap/app_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:gravity="center_horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/black"
        android:text="@string/welcomePageMainText"
        android:textSize="21sp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/choose_a_day"
        android:textSize="25sp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:hintTextColor="@color/black"
        android:hint="@string/select_a_day">

        <AutoCompleteTextView
            android:id="@+id/auto_complete_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/orderBt"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/white"
        android:padding="18dp"
        android:text="@string/order"
        android:textColor="@color/blue"
        android:textSize="20sp" />
</LinearLayout>
