<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:gravity="center"
    android:layoutDirection="ltr"

    android:padding="16dp"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:id="@+id/styleUserIcon"
            android:layout_width="155dp"
            android:layout_height="155dp"
            app:cardCornerRadius="100dp">

            <ImageView
                android:id="@+id/userIcon"
                android:layout_width="155dp"
                android:layout_height="155dp"
                android:layout_centerHorizontal="true"
                android:scaleType="centerCrop"
                android:src="@drawable/img"
                app:shapeAppearanceOverlay="@style/circular" />
        </androidx.cardview.widget.CardView>


        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="18dp"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            tools:ignore="TextFields" />


        <EditText
            android:id="@+id/passwordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/password"
            android:inputType="text"
            android:padding="18dp"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/invalidEmailTextLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:text="invalid"
            android:textColor="@color/red"
            android:textSize="18sp"
            android:visibility="invisible" />


        <Button
            android:id="@+id/loginBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:padding="18dp"
            android:text="@string/Login"
            android:textColor="@color/blue"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/new_here"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/registerTextBt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="32dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/register"
                android:textColor="@color/red"
                android:textSize="18sp" />
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>